--- a/build.gradle
+++ b/build.gradle
@@ -7,10 +7,36 @@ version '1.0'
 
 sourceCompatibility = 1.8
 
+def log4jVersion = '2.11.1'
+
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile (
+            'com.amazonaws:aws-lambda-java-core:1.1.0',
+            'com.amazonaws:aws-lambda-java-events:1.1.0',
+            "org.apache.logging.log4j:log4j-api:$log4jVersion",
+            "org.apache.logging.log4j:log4j-core:$log4jVersion",
+            'io.searchbox:jest:6.3.1'
+    )
+
+    compileOnly (
+            'org.projectlombok:lombok:1.18.8'
+    )
+
+    annotationProcessor (
+            'org.projectlombok:lombok:1.18.8'
+    )
 }
+
+task buildZip(type: Zip) {
+    from compileJava
+    from processResources
+    into('lib') {
+        from configurations.compileClasspath
+    }
+}
+
+build.dependsOn buildZip
